test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-nonnil-borrowed.good
init-field-dflt-nonnil-unmanaged-from-nonnil-borrowed.chpl:8: error: Cannot assign to unmanaged MyClass from borrowed MyClass
